# arkencrab

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  release.yml  test.yml
nix/: package.nix
src/: cli.rs  main.rs  profiles.ini  profiles.rs
