# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "arkencrab"
description = "Experimental arkenfox toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6.18"
chrono = { version = "0.4.41", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.42", features = ["derive", "env"] }
clap_complete = "4.5.52"
color-eyre = { version = "0.6.5", default-features = false }
eyre = "0.6.12"
owo-colors = "4.2.1"
regex = "1.11.1"
rust-ini = "0.21.1"
reqwest = { version = "0.12.19", features = ["blocking", "charset", "http2", "macos-system-configuration", "rustls-tls-webpki-roots", "gzip", "brotli", "zstd"], default-features = false }
similar = "2.7.0"
shlex = "1.3.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
