# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "arkencrab"
description = "Experimental arkenfox toolbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anstream = "1.0.0"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"
color-eyre = { version = "0.6.5", default-features = false }
eyre = "0.6.12"
owo-colors = "4.3.0"
regex = "1.12.3"
rust-ini = "0.21.3"
reqwest = { version = "0.13.2", features = ["blocking", "charset", "query", "json", "deflate", "gzip", "brotli", "zstd"], default-features = false }
similar = "2.7.0"
shlex = "1.3.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
